welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:3: error: '=' expected but ';' found.
var restb==b%5
^maxMod5:4: error: '=' expected but ';' found.
	if (a==b) return 0
^