welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
var resta==a%5
var restb==b%5
	if (a==b) return 0
	else 
		if (resta==restb) return Math.min(a,b)
		else return Math.max(a,b)
}